Flytter konfigurasjon til properties (#1944)